@@ -93,3 +93,4 @@ bookmark
 bookmarks
 stylesheet
 selectable
+pluggable
